Important changes since GBBopen 1.4:

  * Changes to extended-REPL commands
     - New :lmf (LOAD-MODULE-FILE) command

  * Changes to GBBopen Tools
     - New left-leaning red-black (LLRB) tree entities
     - New HTTP-DATE-AND-TIME function

  * Changes to Portable Threads
     - New ATOMIC-INCF& and ATOMIC-DECF& macros


Important changes in GBBopen 1.4:

  * Changes to gbbopen-modules directory processing
     - New *IGNORED-GBBOPEN-MODULES-DIRECTORY-SUBDIRECTORIES* global 
       variable

  * Changes to extended-REPL commands
     - New :ot (describe offset-univeral-time value) command
     - New :pic (print-instances-of-class) command
     - New :ut (describe univeral-time value) command

  * Changes to GBBopen Tools
     - New *DISABLE-WITH-ERROR-HANDLING* global variable
     - New DOSUBLISTS macro
     - New :all-numeric, :include-day, and :full-names arguments to 
       FULL-DATE-AND-TIME
     - New PRINT-INSTANCE-SLOT-VALUE generic function

  * Changes to Portable Threads
     - New SPAWN-FORM macro
     - New constant NEARLY-FOREVER-SECONDS
     - New function SLEEP-NEARLY-FOREVER
     - CLISP MT support (thanks to Vladimir Tzankov)

  * Changes to GBBopen
     - Support for link-pointer objects, new LINK-INSTANCE-OF 
       generic function, and new STANDARD-LINK-POINTER class
     - New DESCRIBE-INSTANCE-SLOT-VALUE generic function
     - Abbreviated + specifier for :plus-subclasses and :plus-subevents
     - Abbreviated = specifier for :no-subclasses and :no-subevents


Important changes in GBBopen 1.3:

  * Incompatible changes:
     - Optional arguments (other than the universal-time argument) have
       been changed to keyword arguments in BRIEF-DATE, 
       BRIEF-DATE-AND-TIME, INTERNET-TEXT-DATE-AND-TIME, 
       ISO8661-DATE-AND-TIME, MESSAGE-LOG-DATE-AND-TIME

  * Changes to Module Manager
     - More consistent OS/platform compile-directory naming

  * Changes to GBBopen Tools