@@ -100,6 +100,12 @@ reload all subsequent files and <a href="ref-glossary.html#gl:modules">modules</
 <code>:reload</code> </td><td valign="baseline" colspan="1" align="left"> Always reload the file </td></tr>
 <tr>
 <td valign="baseline" colspan="1" align="left">
+<code>:skip-recompile</code>&nbsp;&nbsp;&nbsp; </td><td valign="baseline" colspan="1" align="left"> Skip recompiling the file if it has been 
+loaded already</td></tr>
+<tr>
+<td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> (takes precedence over other recompilation decisions)</td></tr>
+<tr>
+<td valign="baseline" colspan="1" align="left">
 <code>:source</code> </td><td valign="baseline" colspan="1" align="left"> Do not compile the file (load the source instead) </td></tr>
 <tr>
 <td valign="baseline" colspan="1" align="left"></td></tr></tbody></table>
