@@ -474,7 +474,9 @@ example of the use of that entity.
 <a href="ref-load-module.html#id2">25</a><br /><code>:run-polling-functions</code>, <b>start-control-shell</b>   initarg, <a href="ref-start-control-shell.html#id2"><font color="#007f00"><i>389</i></font></a>
 <br /><code>:save-executed-ksas</code>, <b>start-control-shell</b> initarg, <a href="ref-start-control-shell.html#id2"><font color="#007f00"><i>389</i></font></a>
 <br /><code>:save-obviated-ksas</code>, <b>start-control-shell</b> initarg, <a href="ref-start-control-shell.html#id2"><font color="#007f00"><i>389</i></font></a>
-<br /><code>:source</code>
+<br /><code>:skip-recompile</code>, define-module file option, 
+<a href="ref-compile-module.html#id2">14</a>, 
+<a href="ref-define-module.html#id1">16</a><br /><code>:source</code>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;compile/load-module option, 
 <a href="ref-startup-module.html#id1">8</a>, 
 <a href="ref-compile-module.html#id1">14</a>, 
